         dialogs to be navigated by cursor keys (Fred).
20080613 debugger/{expression.c,variable.c}: add <string.h> for string
         prototypes (Fred).
20080614 ui/widget/{options.pl,widget_internals.h}: try to have widget
         options size themselves a little better (Fred).
20080614 ui/options.dat: make blocks plural (Fred).
20080614 ui/widget/options.pl: make a better stab at accounting for entry
         text length (Fred).
20080614 ui/widget/select.c: make select widgets size themselves a bit
         better too (Fred).
20080614 ui/widget/options.pl: move to a single generic options menu draw
         function (Fred).
20080614 ui/widget/options.pl: fix widget number entry options (Fred).
20080614 ui/widget/memory.c: fix the widget memory browse display
         (patch #1991755) (Gergely Szasz).
20080614 ui/xlib/xui.c: use XCheckMaskEvent() instead of XCheckIfEvent() with
         an empty test (patch #1991780) (Gergely Szasz).
20080614 menu_data.dat: ROM shortcut key for TS2068 doesn't work (Fred).
20080614 ui/widget/{widget_internals.h,widget.c}: fix disabled widget menu
         entries (thanks, Phil) (Fred).
20080616 debugger/{breakpoint.c,debugger.c,debugger_internals.h},
         disk/{beta.[ch],fdd.[ch],plusd.[ch],upd_fdc.[ch],wd_fdc.[ch]},
         event.[ch],fuse.c,loader.c,machine.c,menu.c,periph.c,profile.c,
         rzx.[ch],spectrum.[ch],tape.[ch],timer/timer.[ch],ui/gtk/debugger.c,
         z80/{coretest.c,z80.[ch],z80.pl,z80_ops.c}: refactor the event
         architecture so that modules register their own events with the
         event system (patch #1991683).
20080619 event.c: add missing #include <string.h>.
20080619 ui/gtk/gtkkeyboard.c: remove X dependency for unshifting keys.
20080619 rzx.c: add debugger event for end of RZX playback.
20080621 debugger/breakpoint.c: don't try copying an empty condition.
20080621 debugger/debugger.c: when exiting, quit the main emulation loop
	 immediately.