@@ -1,5 +1,5 @@
 /* compat.h: various compatibility bits
-   Copyright (c) 2003 Philip Kendall
+   Copyright (c) 2003-2008 Philip Kendall
 
    $Id$
 
@@ -28,6 +28,8 @@
 
 #include <stdlib.h>
 
+#include <utils.h>
+
 /* Remove the gcc-specific incantations if we're not using gcc */
 #ifdef __GNUC__
 
@@ -43,14 +45,6 @@
 
 #endif				/* #ifdef __GNUC__ */
 
-/* Certain brain damaged operating systems (DOS/Windows) treat text
-   and binary files different in open(2) and need to be given the
-   O_BINARY flag to tell them it's a binary file */
-#ifndef O_BINARY
-#define O_BINARY 0
-#endif				/* #ifndef O_BINARY */
-
-/* Replacement functions */
 #ifndef HAVE_DIRNAME
 char *dirname( char *path );
 #endif				/* #ifndef HAVE_DIRNAME */
@@ -76,5 +70,20 @@ int compat_osname( char *buffer, size_t length );
 const char* compat_get_temp_path( void );
 const char* compat_get_home_path( void );
 int compat_is_absolute_path( const char *path );
+
+#ifndef UI_WII
+typedef int compat_fd;
+#else                           /* #ifndef UI_WII */
+typedef FILE* compat_fd;
+#endif                          /* #ifndef UI_WII */
+
+extern const compat_fd COMPAT_FILE_OPEN_FAILED;
+
+compat_fd compat_file_open( const char *path, int write );
+off_t compat_file_get_length( compat_fd fd );
+int compat_file_read( compat_fd fd, utils_file *file );
+int compat_file_write( compat_fd fd, const unsigned char *buffer,
+                       size_t length );
+int compat_file_close( compat_fd fd );
 
 #endif				/* #ifndef FUSE_COMPAT_H */
