@@ -1221,8 +1221,8 @@ if1_plug( const char *filename, int what )
   case 1:
     if( if1_ula.fd_r >= 0 )
       close( if1_ula.fd_r );
-    fd = if1_ula.fd_r = open( filename, O_RDWR | O_BINARY | O_NONBLOCK );
-    if( fcntl( fd, F_SETFL, O_RDONLY | O_BINARY | O_NONBLOCK ) )
+    fd = if1_ula.fd_r = open( filename, O_RDWR | O_NONBLOCK );
+    if( fcntl( fd, F_SETFL, O_RDONLY | O_NONBLOCK ) )
       ui_error( UI_ERROR_ERROR, "Cannot set O_RDONLY on '%s': %s",
 		filename, strerror( errno ) );
     if1_ula.rs232_buffer = 0x100;		/* buffer is empty */
@@ -1230,15 +1230,15 @@ if1_plug( const char *filename, int what )
   case 2:
     if( if1_ula.fd_t >= 0 )
       close( if1_ula.fd_t );
-    fd = if1_ula.fd_t = open( filename, O_RDWR | O_BINARY | O_NONBLOCK );
-    if( fcntl( fd, F_SETFL, O_WRONLY | O_BINARY | O_NONBLOCK ) )
+    fd = if1_ula.fd_t = open( filename, O_RDWR | O_NONBLOCK );
+    if( fcntl( fd, F_SETFL, O_WRONLY | O_NONBLOCK ) )
       ui_error( UI_ERROR_ERROR, "Cannot set O_WRONLY on '%s': %s",
 		filename, strerror( errno ) );
     break;
   case 3:
     if( if1_ula.fd_net >= 0 )
       close( if1_ula.fd_net );
-    fd = if1_ula.fd_net = open( filename, O_RDWR | O_BINARY | O_NONBLOCK );
+    fd = if1_ula.fd_net = open( filename, O_RDWR | O_NONBLOCK );
     break;
   }
 
